Refactor to in-process Java analysis using JavaParser (hybrid approach 3)
Replace the external JDTLS process integration with in-process Java analysis
using JavaParser. No subprocess management needed — the analysis service runs
inside the same JVM as the MCP server.

- Replace lsp4j dependency with javaparser-core 3.26.4
- Rewrite JdtlsConnectionService: remove ProcessBuilder/LSP, add JavaParser
- New MCP tools: getDiagnostics(file), getSymbols(file)
- Remove startJdtls/stopJdtls tools (no process to manage)
- 18 tests passing (diagnostics, symbols, workspace validation)
- Fix maven.compiler.release to 17 (matching available JDK)

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>